# haven

./: .env.example  .gitignore  CLAUDE.md  README.md  RELEASE.txt  index.html  lili_house_aitown.jsx  main.jsx  package-lock.json  package.json  pyproject.toml  vite.config.js
.claude/skills/execute-issues/: SKILL.md
.claude/skills/release-version/: SKILL.md
.claude/skills/upload-issues/: SKILL.md
backend/: __init__.py  __main__.py  config.py  drives.py  loop.py  nav.py  sim.py  world.py
backend/tests/: test_drives.py  test_loop.py  test_nav.py  test_scaffold.py  test_sim.py  test_world.py
specification/: ARCHITECTURE.md  MISSION.md  PROTOTYPE_PHASE1_SPEC.md  ROADMAP.md  TERMINAL_SERVER_SPEC.md  UI_SPEC.md
specification/roadmap/implementation/: v0-execution-report.md  v0-github-report.md  v0-issues.md  v0.2-execution-report.md  v0.2-github-report.md  v0.2-issues.md  v1-execution-report.md  v1-github-report.md  v1-issues.md
stubs/: empty.mjs
tests/: bfs.test.js  chat-client.test.js  chat-fallback.test.js  chat-prompt.test.js  chat-ui.test.jsx  content.test.js  drives.test.js  floorplan.test.js  grids.test.js  interpolation.test.jsx  movement.test.jsx  render.test.jsx  scaffold.test.jsx  tick.test.js  town.test.jsx  ui.test.jsx
