[project]
name = "haven-backend"
version = "0.0.0"
description = "Haven backend — headless world, simulation, and (from v1.2) terminal server."
requires-python = ">=3.11"

# Dev tooling is installed into a local .venv (gitignored): pytest + ruff.
# The v1.1 backend has no runtime dependencies (stdlib only).

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
